--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "ejs": "^3.1.9",
+    "ejs-mate": "^4.0.0",
     "express": "^4.18.2",
+    "layout": "^2.2.0",
     "method-override": "^3.0.0",
     "mongoose": "^7.4.3",
     "nodemon": "^3.0.1",
