--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "method-override": "^3.0.0",
     "mongoose": "^7.4.3",
     "nodemon": "^3.0.1",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^8.0.0",
     "path": "^0.12.7"
   }
 }
