--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "ejs": "^3.1.9",
     "ejs-mate": "^4.0.0",
     "express": "^4.18.2",
+    "express-mongo-sanitize": "^2.2.0",
     "express-session": "^1.17.3",
+    "helmet": "^7.0.0",
     "joi": "^17.10.0",
     "layout": "^2.2.0",
     "method-override": "^3.0.0",
@@ -29,6 +31,7 @@
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^8.0.0",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "sanitize-html": "^2.11.0"
   }
 }
